View of scrollbar:fixed Select between expense and revenue:done

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,19 @@
     --verdeColor: rgb(92, 104, 92);
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
 body{
     font-family: 'Raleway', sans-serif;
     background-color: var(--bgColor);
@@ -216,6 +229,7 @@ transform: translateX(0);
     transition: all .2s;
     transform: scale(0);
     transform-origin: top left;
+    overflow-y: scroll;
 }
 
 .archivo-content.active {
